@startuml
'http://plantuml.com/skinparam.html
skinparam handwritten true
skinparam monochrome true
skinparam packageStyle rect
skinparam defaultFontName FG Virgil
skinparam shadowing false

class ConsultarTarefasUI <<presentation>>
class ConsultarTarefasController <<application>>
class PersistenceContext <<persistence>>
class RepositoryFactory <<factory>>
class PedidoRepository <<repository>>
class ColaboradorRepository <<repository>>


ConsultarTarefasUI --> ConsultarTarefasController
ConsultarTarefasUI : doShow()
ConsultarTarefasUI : getUser()
ConsultarTarefasUI : tarefasPendentes(colab)
ConsultarTarefasUI : filtrarTarefasPendentes(colab)
ConsultarTarefasUI : ordenarTarefasPendentes(colab)

ConsultarTarefasController : getUser()
ConsultarTarefasController : tarefasPendentes(colab)
ConsultarTarefasController : filtrarTarefasPendentes(colab)
ConsultarTarefasController : ordenarTarefasPendentes(colab)

ConsultarTarefasController --> PedidoRepository
ConsultarTarefasController --> ColaboradorRepository
ConsultarTarefasController --> PersistenceContext
PersistenceContext --> RepositoryFactory

RepositoryFactory --> PedidoRepository
RepositoryFactory --> ColaboradorRepository

@enduml